--- a/back-end/secao-4-nodejs/dia2/package.json
+++ b/back-end/secao-4-nodejs/dia2/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "4.3",
+    "mocha": "10.0"
+  }
 }
